// 定义项目 API 的 proto 文件 可以同时描述 gRPC API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

//go package path and package name
option java_package = "microservice.protoc.zan.grpc";

message AddZanReq{
    int32   user_id = 1;     // 用户ID
    int32   app_id = 2;          // APP内容类型【1：全屋记；2：文章；3：短内容，4：全屋记图片；5：评价】
    int32   third_id = 3;        // App内容ID
    int32   source = 4;          // 来源【1：正常，2：灌水】
}

message DelZanReq{
    int32   user_id = 1;     // 用户ID
    int32   app_id = 2;      // APP内容类型【1：全屋记；2：文章；3：短内容，4：全屋记图片；5：评价】
    int32   third_id = 3;    // App内容ID
    int32   source = 4;      // 来源【1：正常，2：灌水】
}

message MultiDelReq{
    int32   user_id = 1;  // 用户ID
    int32   app_id = 2;   // APP内容类型【1：全屋记；2：文章；3：短内容，4：全屋记图片；5：评价】
    repeated int32 third_ids = 3;  //App内容ID集
}


message IsZanReq{
    int32   user_id = 1;  // 用户ID
    int32   app_id = 2;      //APP内容类型【1：全屋记；2：文章；3：短内容，4：全屋记图片；5：评价】
    int32   third_id = 3; // App内容ID
}
message IsZansReq{
    int32   user_id = 1;  // 用户ID
    int32   app_id = 2;    // APP内容类型【1：全屋记；2：文章；3：短内容，4：全屋记图片；5：评价】
    repeated int32 third_ids = 3; //App内容ID集
}

message ZanCntReq{
    int32   app_id = 1;      //APP内容类型【1：全屋记；2：文章；3：短内容，4：全屋记图片；5：评价】
    int32   third_id = 2; //App内容ID集
}

message MultiZanCntReq{
    int32   app_id = 1;      //APP内容类型【1：全屋记；2：文章；3：短内容，4：全屋记图片；5：评价】
    repeated int32 third_ids = 2; //App内容ID集
}

message UserZanReq{
    int32 user_id = 1;  // 用户ID
    int32 app_id = 2;   // APP内容类型
    int32 page_num = 3;
    int32 page_size = 4;
}

message UserZanByAppIdsReq{
    int32 user_id = 1;  // 用户ID
    repeated int32 app_ids = 2;   // APP内容类型
    int32 page_num = 3;
    int32 page_size = 4;
    repeated SortField sort_fields = 5; // 排序字段
}

message SortField {
    string field = 1;
    string order = 2;
}